--- a/public/index.html
+++ b/public/index.html
@@ -11,23 +11,37 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="../source/app.css">
+
 </head>
 <body>
-    <h1>Ember-Touch-Examples</h1>
 
-    <ul>
-        <li><a href="./gestures.html">Gestures</a></li>
-        <li><a href="./others.html">Others</a></li>
-    </ul>
+  <div class="container">
+    <div class="row">
+      <div class="span6">
+        <h1>Ember Touch Examples</h1>
+
+          <div class="well">
+            Some info about the project and links could go here...
+          </div>
+
+          <div class="btn-group">
+            <a class="btn" href="./gestures.html">Gestures</a>
+            <a class="btn" href="./others.html">Others</a>
+          </div>
+      </div>
+    </div>
+  </div>
+
+
 
 </body>
 </html>
 
 
-<link rel="stylesheet" href="../source/app.css">
 <script src="../source/app.js"></script>
 <script type="text/javascript">
 
-	minispade.require('app'); 
+	minispade.require('app');
 
 </script>
