Setup HandlebarsFilter in Assetfile Now, we could use handlebars template and configure templateName property of our views

--- a/public/gestures.html
+++ b/public/gestures.html
@@ -32,6 +32,8 @@
             Tap One
           {{/view}}
 
+          {{view App.TestView elementId="test-view"}}
+
         </script>
 
       </div>
