Reorder css folders and some project structure

--- a/public/gestures.html
+++ b/public/gestures.html
@@ -48,6 +48,6 @@
 <script type="text/javascript">
 
 	minispade.require('app');
-	minispade.require('app/app/gestures');
+	minispade.require('app/public/gestures');
 
 </script>
