Reorder project structure and setup config.ru

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
           </div>
 
           <div class="btn-group">
-            <a class="btn" href="./gestures.html">Gestures</a>
-            <a class="btn" href="./others.html">Others</a>
+            <a class="btn" href="gestures.html">Gestures</a>
+            <a class="btn" href="others.html">Others</a>
           </div>
 
       </div>
