--- a/public/gestures.html
+++ b/public/gestures.html
@@ -24,13 +24,15 @@
 
         <script type="text/x-handlebars">
 
-          {{#view Em.View elementId="hola"}}
-                hola hola
+          {{#view App.TapView}}
+            Tap Once
           {{/view}}
 
-          {{#view App.TapView elementId="tap1"}}
-            Tap One
+          {{#view App.DoubleTapView}}
+            Tap Twice
           {{/view}}
+
+          <div class="clearfix"></div>
 
           {{view App.TestView elementId="test-view"}}
 
