--- a/public/index.html
+++ b/public/index.html
@@ -16,23 +16,89 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="span6">
-        <h1>Ember Touch Examples</h1>
 
-          <div class="well">
-            Some info about the project and links could go here...
-          </div>
-
-          <div class="btn-group">
-            <a class="btn" href="gestures.html">Gestures</a>
-            <a class="btn" href="others.html">Others</a>
-          </div>
-
+<div class=" navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a id="home-link" class="brand" href="#home" data-toggle="tab">Ember-Touch</a>
+        </div>
       </div>
+</div>
+
+<a href="https://github.com/emberjs-addons/sproutcore-touch"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+
+<div class="container-fluid">
+
+    <div class="row-fluid">
+
+        <div class="span3">
+
+            <div class="well side-bar">
+                <ul class="nav nav-list">
+                  <li class="nav-header">Docs</li>
+                  <li><a href="#ember-touch" data-toggle="tab">Ember-Touch</a></li>
+                  <li><a href="#object-responsabilities" data-toggle="tab">Object Responsabilities</a></li>
+                  <li><a href="#handling-events" data-toggle="tab">Handling Events</a></li>
+                  <li class="nav-header">Examples</li>
+                  <li><a href="gestures.html">Pan</a></li>
+                  <li><a href="gestures.html">Pan</a></li>
+                  <li><a href="gestures.html">Pan</a></li>
+                  <li class="nav-header">API</li>
+                  <li><a href="#">YuiDoc</a></li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div class="span9 tab-content">
+
+            <div id="home" class="tab-pane">
+                <div class="hero-unit">
+
+                    <h1>Ember Touch</h1>
+                    <p>A lightweight library for building and
+                    using touch gestures with Ember Applications</p>
+
+                </div>
+
+                <div class="row-fluid">
+                    <div class="span6">
+                          <h2>Gestures</h2>
+                          <p>Use existing gestures as Tap,
+                          TouchHold, Pinch ... or create your own gestures.</p>
+                    </div>
+
+                    <div class="span6">
+                          <h2>Coordinate Gesture Recognition</h2>
+                          <p>Use gestureDelegates or application gesture
+                          manager to handle when your gestures are able to
+                          be recognized based on your application
+                          logic.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="home" class="tab-pane">
+                home
+            </div>
+
+            <div id="ember-touch" class="tab-pane">
+                Ember-touch
+            </div>
+
+            <div id="object-responsabilities" class="tab-pane">
+        object-responsabilities
+            </div>
+
+            <div id="handling-events" class="tab-pane">
+handling-events
+            </div>
+
+        </div>
+
+
     </div>
-  </div>
+</div>
 
 
 
@@ -44,5 +110,8 @@
 <script type="text/javascript">
 
 	minispade.require('app');
+    $(function () {
+        $('#home-link').tab('show');
+    });
 
 </script>
