Add generate_docs rake tasks and link website in navigation section

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
                   <li><a href="gestures.html">Pan</a></li>
                   <li><a href="gestures.html">Pan</a></li>
                   <li class="nav-header">API</li>
-                  <li><a href="#">YuiDoc</a></li>
+                  <li><a href="api/index.html">YuiDoc</a></li>
                 </ul>
             </div>
 
@@ -87,11 +87,11 @@
             </div>
 
             <div id="object-responsabilities" class="tab-pane">
-        object-responsabilities
+                object-responsabilities
             </div>
 
             <div id="handling-events" class="tab-pane">
-handling-events
+                handling-events
             </div>
 
         </div>
