Add gestures links in Navigation List

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
                   <li><a href="#object-responsabilities" data-toggle="tab">Object Responsabilities</a></li>
                   <li><a href="#handling-events" data-toggle="tab">Handling Events</a></li>
                   <li class="nav-header">Examples</li>
-                  <li><a href="gestures.html">Pan</a></li>
-                  <li><a href="gestures.html">Pan</a></li>
+                  <li><a href="pan_and_pinch.html">Pan & Pinch</a></li>
+                  <li><a href="gestures.html">Tap & TouchHold</a></li>
                   <li><a href="gestures.html">Pan</a></li>
                   <li class="nav-header">API</li>
                   <li><a href="api/index.html">YuiDoc</a></li>
