Added swipe example

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
                   <li><a href="pan_and_pinch.html">Pan & Pinch</a></li>
                   <li><a href="gestures.html">Tap & TouchHold</a></li>
                   <li><a href="gestures.html">Pan</a></li>
+                  <li><a href="swipe.html">Swipe</a></li>
                   <li class="nav-header">API</li>
                   <li><a href="api/index.html">YuiDoc</a></li>
                 </ul>
