Define gesture views with handlebars WIP: moving logic to Router API

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-<div class=" navbar navbar-inverse navbar-fixed-top">
+<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
           <a id="home-link" class="brand" href="#home" data-toggle="tab">Ember-Touch</a>
@@ -41,8 +41,7 @@
                   <li><a href="#handling-events" data-toggle="tab">Handling Events</a></li>
                   <li class="nav-header">Examples</li>
                   <li><a href="pan_and_pinch.html">Pan & Pinch</a></li>
-                  <li><a href="gestures.html">Tap & TouchHold</a></li>
-                  <li><a href="gestures.html">Pan</a></li>
+                  <li><a href="tap_and_touch_hold.html">Tap & TouchHold</a></li>
                   <li><a href="swipe.html">Swipe</a></li>
                   <li class="nav-header">API</li>
                   <li><a href="api/index.html">YuiDoc</a></li>
