--- a/public/swipe.html
+++ b/public/swipe.html
@@ -16,28 +16,9 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="span10">
-
-        <script type="text/x-handlebars">
-
-          {{#view App.SwipeView}}
-            <div class="huge-letter">
-              {{ view.letter }}
-            </div>
-
-            <div class="alert alert-info">
-              Swipe left and right on the letter
-            </div>
-
-          {{/view}}
-
-        </script>
-
-      </div>
-    </div>
-  </div>
+    <script type="text/x-handlebars">
+        {{view App.SwipeExampleView}}
+    </script>
 
 </body>
 </html>
@@ -47,6 +28,5 @@
 <script type="text/javascript">
 
 	minispade.require('app');
-	minispade.require('app/public/gestures');
 
 </script>
