gestures/index.html replaces individual gestures pages with the Router API

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,9 @@
                   <li><a href="#object-responsabilities" data-toggle="tab">Object Responsabilities</a></li>
                   <li><a href="#handling-events" data-toggle="tab">Handling Events</a></li>
                   <li class="nav-header">Examples</li>
-                  <li><a href="pan_and_pinch.html">Pan & Pinch</a></li>
-                  <li><a href="tap_and_touch_hold.html">Tap & TouchHold</a></li>
-                  <li><a href="swipe.html">Swipe</a></li>
+                  <li><a href="gestures/#/pan_and_pinch">Pan & Pinch</a></li>
+                  <li><a href="gestures/#/tap_and_touch_hold">Tap & TouchHold</a></li>
+                  <li><a href="gestures/#/swipe">Swipe</a></li>
                   <li class="nav-header">API</li>
                   <li><a href="api/index.html">YuiDoc</a></li>
                 </ul>
