--- a/public/gestures/index.html
+++ b/public/gestures/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]--> <!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]--> <!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]--> <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
@@ -9,22 +10,19 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <link rel="stylesheet" href="../source/app.css">
 
 </head>
 <body>
-
-    <script type="text/x-handlebars">
-        {{view App.TapAndTouchHoldExampleView}}
-    </script>
-
 </body>
 </html>
 
 
 <script src="../source/app.js"></script>
 <script type="text/javascript">
+
 	minispade.require('app');
+
 </script>
